Modified ride request disabling those drivers who are at IN_PROGRESS status